# ocr

./: .envrc  .gitignore  AGENTS.md  AGENTS_STRUCTURE.md  API_COMPARISON.md  Dockerfile  DocumentProcessing.md  README.md  docker-compose.yml  plan.md  pyproject.toml
.github/workflows/: ci.yml
config/nginx/: configure-nginx-ocr.reb00t.io.sh  ocr.reb00t.io.conf
sample_code/: image.py  image_cache.py  ocr.py
scripts/: build.sh  deploy.sh  get_logs.sh
src/: api_doc.md  elements.py  main.py  pdf.py  schema.py  tables.py
src/backends/: image.py  mistral.py  privatemode.py  quality.py  unstructured.py
src/localocr/: __init__.py  __main__.py  cli.py  engine.py  inputs.py  result.py
src/privatemode/: __init__.py  __main__.py  cli.py  engine.py  result.py
src/routes/: demo.py  doc.py  ocr.py
src/templates/: demo.html  docs.html  hello.html  login.html
test/: conftest.py  e2e.sh
test/integration/: test_ocr_image.py
test/unit/: test_auth.py  test_backend.py  test_backend_retries.py  test_elements.py  test_env_parsing.py  test_image.py  test_localocr.py  test_localocr_cli.py  test_mistral.py  test_ocr.py  test_ocr_cli.py  test_pdf.py  test_quality.py  test_routes.py  test_schema.py  test_tables.py  test_unstructured.py
